fix: try to fix video play on safari

--- a/src/styles/components/story.scss
+++ b/src/styles/components/story.scss
@@ -13,6 +13,7 @@
 
 	display: flex;
 	align-items: end;
+	user-select: none;
 
 	@include hover {
 		#{$root}__content {
